# frame-shot

./: .gitignore  README.md  components.json  drizzle.config.ts  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  package-lock.json  package.json  test.md  tsconfig.web.json
.github/: copilot-instructions.md
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
native/: README.md  WINDOW_PICKER.md  WINDOW_REGION_DETECTION.md  quick-test.bat
native/frameshot-native/: CMakeLists.txt  build.bat  build.sh
native/frameshot-native/src/: main.cpp
resources/templates/: SDC_作業実績報告書_file result.xlsx  attendance_template.xlsx
specs/001-screenshot-capture/: IMPLEMENTATION_REPORT.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-screenshot-capture/checklists/: requirements.md
specs/001-screenshot-capture/contracts/: ipc-contracts.md
src/main/: index.ts
src/main/database/: index.ts
src/main/handlers/: capture.handlers.ts  index.ts  window-picker.handlers.ts
src/main/services/: capture.service.ts  file.service.ts  native-process.service.ts  screen.service.ts  window.service.ts
src/main/types/: capture.types.ts  env.d.ts  response.type.ts
src/main/utils/: capture.utils.ts  file.utils.ts
src/preload/: capture.ts  index.d.ts  index.ts
src/renderer/: capture.html  index.html
src/renderer/src/: App-old.tsx  App.tsx  index.css  main-capture.tsx  main.tsx  router.tsx
(+20 files in other folders)
